RECOMMEND-1 : Initial work
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-recommendation@70076 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/conf/plugins/recommendation.properties
+++ b/webapp/WEB-INF/conf/plugins/recommendation.properties
@@ -8,3 +8,7 @@ recommendation.recommender.test.preferenceTable=recommendation_default
 recommendation.recommender.test.userIDColumn=id_user
 recommendation.recommender.test.itemIDColumn=id_item
 recommendation.recommender.test.preferenceColumn=preference_value
+
+# Servlet default parameters
+recommendation.default.recommender=test
+recommendation.default.count=3
