RECOMMEND-1 : Initial work
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-recommendation@70227 bab10101-e421-0410-a517-8ce0973de3ef

--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,11 @@
         <jiraProjectName>RECOMMEND</jiraProjectName>
         <jiraComponentId>21223</jiraComponentId>
     </properties>
+    
+    <scm>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-recommendation</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-recommendation</developerConnection>
+        <url>http://dev.lutece.paris.fr/viewvc/lutece/portal/trunk/plugins/technical/plugin-recommendation</url>
+    </scm>
+
 </project>
