--- a/webapp/WEB-INF/conf/plugins/recommendation.properties
+++ b/webapp/WEB-INF/conf/plugins/recommendation.properties
@@ -1,8 +1,10 @@
 # recommendation properties file
 
 
+# List of recommenders 
 recommendation.recommendersList=test
 
+# Test recommender
 recommendation.recommender.test.dataSource=portal
 recommendation.recommender.test.preferenceTable=recommendation_default
 recommendation.recommender.test.userIDColumn=id_user
