RECOMMEND-4 : Let customize threshold RECOMMEND-3 : file data sample added

--- a/webapp/WEB-INF/conf/plugins/recommendation.properties
+++ b/webapp/WEB-INF/conf/plugins/recommendation.properties
@@ -1,16 +1,20 @@
 # recommendation properties file
 
-
 # List of recommenders 
-recommendation.recommendersList=test
+recommendation.recommendersList=dbsample, filesample
 
-# Test recommender
-recommendation.recommender.test.dataSource=portal
-recommendation.recommender.test.preferenceTable=recommendation_default
-recommendation.recommender.test.userIDColumn=id_user
-recommendation.recommender.test.itemIDColumn=id_item
-recommendation.recommender.test.preferenceColumn=preference_value
+# Database Sample recommender
+recommendation.recommender.dbsample.dataSource=portal
+recommendation.recommender.dbsample.preferenceTable=recommendation_default
+recommendation.recommender.dbsample.userIDColumn=id_user
+recommendation.recommender.dbsample.itemIDColumn=id_item
+recommendation.recommender.dbsample.preferenceColumn=preference_value
+recommendation.recommender.dbsample.threshold=0.2
+
+# File Sample recommender
+recommendation.recommender.filesample.dataFile=/WEB-INF/plugins/recommendation/sample.txt
+recommendation.recommender.filesample.threshold=0.1
 
 # Servlet default parameters
-recommendation.default.recommender=test
+recommendation.default.recommender=filesample
 recommendation.default.count=3
