RECOMMEND-7 : Add the BooleanPref recommender

--- a/webapp/WEB-INF/conf/plugins/recommendation.properties
+++ b/webapp/WEB-INF/conf/plugins/recommendation.properties
@@ -1,7 +1,12 @@
 # recommendation properties file
 
+# recommender values 
+# 0 : default recommender
+# 1 : boolean recommender
+
+
 # List of recommenders 
-recommendation.recommendersList=dbsample, filesample
+recommendation.recommendersList=dbsample, filesample, filesample2
 
 # Database Sample recommender
 recommendation.recommender.dbsample.dataSource=portal
@@ -9,11 +14,17 @@ recommendation.recommender.dbsample.preferenceTable=recommendation_default
 recommendation.recommender.dbsample.userIDColumn=id_user
 recommendation.recommender.dbsample.itemIDColumn=id_item
 recommendation.recommender.dbsample.preferenceColumn=preference_value
+recommendation.recommender.dbsample.recommender=0
 recommendation.recommender.dbsample.threshold=0.2
 
-# File Sample recommender
+# File Sample recommenders
 recommendation.recommender.filesample.dataFile=/WEB-INF/plugins/recommendation/sample.txt
+recommendation.recommender.filesample.recommender=0
 recommendation.recommender.filesample.threshold=0.1
+
+recommendation.recommender.filesample2.dataFile=/WEB-INF/plugins/recommendation/sample2.txt
+recommendation.recommender.filesample2.recommender=1
+recommendation.recommender.filesample2.threshold=0.1
 
 # Servlet default parameters
 recommendation.default.recommender=filesample
